# eureqai

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt  tox.ini
.github/workflows/: ci.yml
examples/: sample_project.yml  sample_report.md
scripts/: lint.sh
src/eureqai/: __init__.py  checklist.py  cli.py  config.py  report.py
src/eureqai/evaluators/: __init__.py  base.py  fairness.py  gpai.py  privacy.py  prohibited_practices.py  technical_robustness.py  transparency.py
src/eureqai/metrics/: __init__.py  base.py  common.py  eu_compliance.py  fairness.py  model_behavior.py  robustness.py  transparency.py
tests/: test_checklist.py  test_cli.py  test_config_and_report.py  test_gpai_evaluator.py  test_prohibited_practices.py  test_smoke.py
